src/objects/RSP_MIG_Coda_Document_Header__c.object
<CustomObject>
    <fields>
        <fullName>Migrated_to_FFA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated to FFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_to_Migrate_to_FFA__c</fullName>
        <formula>IF ( tgt_period__c = &quot;Special&quot;, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OK to Migrate to FFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>src_cmpcode__c</fullName>
        <label>src_cmpcode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_curdoc__c</fullName>
        <label>src_curdoc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_descr__c</fullName>
        <label>src_descr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_doccode__c</fullName>
        <label>src_doccode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_docdate__c</fullName>
        <label>src_docdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>src_docnum__c</fullName>
        <label>src_docnum</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_inpdate__c</fullName>
        <label>src_inpdate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_inptime__c</fullName>
        <label>src_inptime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_origcmpcode__c</fullName>
        <label>src_origcmpcode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_origdoccode__c</fullName>
        <label>src_origdoccode</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_origdocnum__c</fullName>
        <label>src_origdocnum</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_origuser__c</fullName>
        <label>src_origuser</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_period__c</fullName>
        <label>src_period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_usrname__c</fullName>
        <label>src_usrname</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>src_yr__c</fullName>
        <label>src_yr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgt_JournalDescription__c</fullName>
        <formula>IF(

(src_cmpcode__c &amp;  src_doccode__c &amp;  src_docnum__c) =  (src_origcmpcode__c &amp;  src_origdoccode__c &amp;  src_origdocnum__c)
,
(src_descr__c &amp; &quot;Posted: &quot; &amp;  LEFT( src_inpdate__c , 6) &amp; &quot; / &quot; &amp;  RIGHT(src_inptime__c,6) &amp; &quot; / &quot; &amp;  src_usrname__c) 
,
(src_descr__c &amp; &quot;Posted: &quot; &amp;  LEFT( src_inpdate__c , 6) &amp; &quot; / &quot; &amp;  RIGHT(src_inptime__c,6) &amp; &quot; / &quot; &amp;  src_usrname__c &amp; &quot; &gt; From Source: &quot; &amp;  src_origcmpcode__c &amp; &quot;.&quot; &amp;  src_origdoccode__c &amp;&quot;.&quot; &amp; src_origdocnum__c &amp; &quot; (&quot;&amp; src_origuser__c &amp;&quot;)&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tgt_JournalDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgt_OwnerCompany__c</fullName>
        <formula>IF( src_cmpcode__c = &quot;RSPINTL&quot;, &quot;RSP International&quot;, &quot;RSP Main&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tgt_OwnerCompany</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgt_period__c</fullName>
        <formula>IF(
VALUE( src_period__c ) &lt; 10
,  src_yr__c &amp; &quot;/00&quot; &amp;  src_period__c 
, IF(
VALUE( src_period__c ) &lt;=13
,
src_yr__c &amp; &quot;/0&quot; &amp;  src_period__c
,
&quot;Special&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tgt_period</label>
        <type>Text</type>
    </fields>
    <label>RSP MIG Coda Document Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>tgt_OwnerCompany__c</columns>
        <columns>src_docdate__c</columns>
        <columns>tgt_period__c</columns>
        <columns>tgt_JournalDescription__c</columns>
        <columns>OK_to_Migrate_to_FFA__c</columns>
        <columns>Migrated_to_FFA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RSP_Intl_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>tgt_OwnerCompany__c</columns>
        <columns>src_docdate__c</columns>
        <columns>tgt_period__c</columns>
        <columns>tgt_JournalDescription__c</columns>
        <columns>OK_to_Migrate_to_FFA__c</columns>
        <columns>Migrated_to_FFA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migrated_to_FFA__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OK_to_Migrate_to_FFA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>tgt_OwnerCompany__c</field>
            <operation>equals</operation>
            <value>RSP International</value>
        </filters>
        <label>RSP International - Unprocessed</label>
    </listViews>
    <listViews>
        <fullName>RSP_Main_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>tgt_OwnerCompany__c</columns>
        <columns>src_docdate__c</columns>
        <columns>tgt_period__c</columns>
        <columns>tgt_JournalDescription__c</columns>
        <columns>OK_to_Migrate_to_FFA__c</columns>
        <columns>Migrated_to_FFA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migrated_to_FFA__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OK_to_Migrate_to_FFA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>tgt_OwnerCompany__c</field>
            <operation>equals</operation>
            <value>RSP Main</value>
        </filters>
        <label>RSP Main - Unprocessed</label>
    </listViews>
    <nameField>
        <displayFormat>CDH{000000}</displayFormat>
        <label>RSP MIG Coda Document Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSP MIG Coda Document Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>